# slash-command-kit

./: .gitignore  CHANGELOG.md  PRE_RELEASE_CHECKLIST.md  README.md  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: specify-rules.mdc
.github/workflows/: release.yml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh
.specify/memory/: constitution.md
commands/: README.md  example.md  sckit.api-designer.md  sckit.architect-dev.md  sckit.architect-lowcode.md  sckit.architect-mom.md  sckit.architect-review.md  sckit.article-summary.md  sckit.chinese-classics.md  sckit.code-analyzer.md  sckit.code-refactor.md  sckit.code-reviewer.md  sckit.collab-reporter.md  sckit.collab.md  sckit.docs-architect.md  sckit.git-committer.md  sckit.insight.md  sckit.ipd-coach.md  sckit.java-pro.md  sckit.learning-planner.md  sckit.mermaid-expert.md  sckit.oss-scanner.md  sckit.pm-lowcode.md  sckit.pm-mom.md  sckit.prompt-analyzer.md  sckit.prompt-engineer.md  sckit.prompt-export.md  sckit.rd-assistant.md  sckit.rd-work-summary.md  sckit.requirement-review.md  sckit.sql-pro.md  sckit.test-automator.md  sckit.tutorial-engineer.md  sckit.user-story.md
scripts/: organize-prompts.ps1  organize_prompts.py  test-release-locally.sh
specs/001-prompt-management-cli/: IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  READY_TO_RELEASE.md  RELEASE.md  RELEASE_GUIDE.md  TESTING.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-init-selection-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/sckit_cli/: __init__.py  __main__.py
tests/: test_basic.py
tests/integration/: test_init_command.py
tests/unit/: test_interactive.py  test_prompt_editor.py
(+5 files in other folders)
